scripts/nullaway/wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8.txt
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/core/Legend.java:103: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.context = null;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/util/Context2D.java:105: error: [NullAway] assigning @Nullable expression to @NonNull field
        originalClip = null;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/util/Context2D.java:106: error: [NullAway] assigning @Nullable expression to @NonNull field
        originalClipTransform = null;
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/util/Context2D.java:241: error: [NullAway] passing @Nullable parameter 'g' where @NonNull is required
        stack.push(g);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/JAwesomeChart.java:119: error: [NullAway] assigning @Nullable expression to @NonNull field
        title = null;
              ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/JAwesomeChart.java:120: error: [NullAway] assigning @Nullable expression to @NonNull field
        subtitle = null;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/JAwesomeChart.java:137: error: [NullAway] assigning @Nullable expression to @NonNull field
        renderer = null;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/JAwesomeChart.java:619: error: [NullAway] dereferenced expression ac.getRenderer() is @Nullable
        System.out.println(ac.getRenderer().getHumanReadableName() + " chart - mean time: " + ((t2 - t1) / i) + " ms");
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/renderers/PieChartRenderer.java:128: error: [NullAway] dereferenced expression dp is @Nullable
                    namesAndValues[i] = namesAndValues[i] + dp.toString(format);
                                                              ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/renderers/PieChartRenderer.java:151: error: [NullAway] dereferenced expression s.get(0) is @Nullable
                    String text = (drawSeriesNamesEnabled ? (s.getName() + (drawValuesEnabled ? " - " : "")) : "") + (drawValuesEnabled ? s.get(0).toString(format) : "");
                                                                                                                                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/renderers/PieChartRenderer.java:202: error: [NullAway] dereferenced expression dataseries.get(0) is @Nullable
                                String text = (drawSeriesNamesEnabled ? (dataseries.getName() + (drawValuesEnabled ? " - " : "")) : "") + (drawValuesEnabled ? dataseries.get(0).toString(format) : "");
                                                                                                                                                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/renderers/twodimensional/Basic2DChartRenderer.java:152: error: [NullAway] assigning @Nullable expression to @NonNull field
        valueAxisCaption = null;
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/renderers/twodimensional/horizontal/ColumnChartRenderer.java:62: error: [NullAway] assigning @Nullable expression to @NonNull field
        series = null;
               ^
    (see http://t.uber.com/nullaway )
../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/renderers/twodimensional/horizontal/ColumnChartRenderer.java:63: error: [NullAway] assigning @Nullable expression to @NonNull field
        context = null;
                ^
    (see http://t.uber.com/nullaway )
Note: ../wpi/url8867e6a4e2_cyberpython_JAwesomeChart_tgz-pJ8-com_gmigdos_jawesomechart_renderers_twodimensional_horizontal_ColumnChartRendererJ8/src/com/gmigdos/jawesomechart/util/Context2D.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
14 errors
